--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,11 @@
     #sidebar li a.active {
       font-weight: bold;
     }
+
+    #content {
+      margin-left: 220px;
+      padding: 20px;
+    }
   </style>
 </head>
 <body>
