added some CSS to the website

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,30 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Todo App</title>
   <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+    }
+
+    h1 {
+      margin: 0;
+      padding: 20px 0;
+      font-size: 24px;
+      text-align: center;
+    }
+
+    h3 {
+      margin: 0;
+      padding-bottom: 10px;
+      font-size: 18px;
+    }
+
+    h4 a,
+    h1 a {
+      color: inherit;
+      text-decoration: none;
+    }
+
     /* Styles for the modal */
     #modal-overlay {
       display: none;
@@ -42,6 +66,7 @@
 
     #sidebar h2 {
       margin-top: 0;
+      color: #333;
     }
 
     #sidebar ul {
@@ -67,14 +92,52 @@
       margin-left: 220px;
       padding: 20px;
     }
+
+    .todo {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 10px;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 3px;
+    }
+
+    .todo button {
+      background-color: #f44336;
+      color: #fff;
+      border: none;
+      border-radius: 3px;
+      cursor: pointer;
+    }
+
+    .todo button:hover {
+      background-color: #d32f2f;
+    }
+
+    .todo.completed {
+      background-color: #f0f0f0;
+      text-decoration: line-through;
+    }
+
+    .todo.completed button {
+      background-color: #4caf50;
+    }
+
+    span.todo-count {
+      font-weight: bold;
+    }
+
   </style>
 </head>
 <body>
   <div id="sidebar">
     <h2>Todo Lists</h2>
     <ul>
-      <li id="allTodos"><a href="#" class="active reloadLink">All Todos</a></li>
-      <li id="completedTodos">Completed Todos</li>
+      <h4 id="allTodos"><a href="#" class="active reloadLink">All Todos</a></h4>
+      <h4 id="completedTodos">Completed Todos</h4>
+      <!-- <li id="allTodos"><a href="#" class="active reloadLink">All Todos</a></li> -->
+      <!-- <li id="completedTodos">Completed Todos</li> -->
     </ul>
   </div>
 
@@ -398,7 +461,6 @@
           updateTodoItem(todo.id, updatedTodo);
         });
       }
-
 
       // Populate the modal with todo data
       titleInput.value = todo.title;
