--- a/public/index.html
+++ b/public/index.html
@@ -18,10 +18,18 @@
       text-align: center;
     }
 
+    h2 {
+      font-size: 18px;
+    }
+
     h3 {
       margin: 0;
       padding-bottom: 10px;
       font-size: 18px;
+    }
+
+    h4 {
+      font-size: 14px;
     }
 
     h4 a,
