more CSS updates

--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,10 @@
       text-decoration: none;
     }
 
+    p#addTodo {
+      margin-top: 20px;
+    }
+
     /* Styles for the modal */
     #modal-overlay {
       display: none;
