--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Todo App</title>
   <link rel="stylesheet" href="/stylesheets/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-...your-sha512-hash-here..." crossorigin="anonymous" />
 </head>
 <body>
   <div id="sidebar">
@@ -155,7 +156,7 @@
       listItem.classList.add('todo');
 
       const deleteButton = document.createElement('button');
-      deleteButton.textContent = 'Delete';
+      deleteButton.innerHTML = '<i class="fas fa-trash"></i>'; // Add the trash can icon
       deleteButton.addEventListener('click', function () {
         event.stopPropagation();
         deleteTodoItem(todo.id);
