updated createCheckbox removing parameter

--- a/public/index.html
+++ b/public/index.html
@@ -127,7 +127,7 @@
     return todos;
   }
 
-  function createCheckbox(listItem) {
+  function createCheckbox() {
     const checkbox = document.createElement('input');
     checkbox.setAttribute('type', 'checkbox');
     checkbox.classList.add('todo-checkbox');
