updated the event listener to open modal with todo details to only work on the todo's text

--- a/public/index.html
+++ b/public/index.html
@@ -195,7 +195,7 @@ function displayTodos(todos) {
     let deleteButton = createDeleteButton(todo);
 
     // Add click event listener to open modal with todo details
-    listItem.addEventListener('click', function () {
+    todoText.addEventListener('click', function () {
       openTodoModal(todo);
     });
 
