--- a/public/index.html
+++ b/public/index.html
@@ -255,6 +255,12 @@ const modal = document.getElementById('modal');
 const cancelButton = document.getElementById('cancelButton');
 const newSaveButton = document.getElementById('new-saveButton');
 
+// Close modal when click is outside
+window.onclick = function(event){
+  if (event.target === modalOverlay){ modalOverlay.style.display = 'none' };
+  if (event.target === modal){ modal.style.display = 'none'; };
+}
+
 // Hide edit save button and display new save button
 const hideEditSaveButton = document.getElementById('edit-saveButton');
 hideEditSaveButton.style.display = "none";
