--- a/public/index.html
+++ b/public/index.html
@@ -78,6 +78,7 @@ function fetchTodos() {
         const allTodosLength = todos.length;
         displayTodos(todos);
         displayTodoCount(todos, allTodosLength);
+        createSublists(todos);
       } else {
         alert('Failed to fetch todos.');
       }
@@ -101,6 +102,7 @@ function fetchFilteredTodos() {
         clearTodos();
         displayTodos(filteredTodos);
         displayTodoCount(filteredTodos, allTodosLength);
+        createSublists(filteredTodos);
       } else {
         alert('Failed to fetch todos.');
       }
@@ -218,11 +220,26 @@ function displayTodos(todos) {
   addTodo.parentNode.insertBefore(todoList, addTodo.nextSibling);
 }
 
-
 // Call the fetchTodos function when the webpage loads
 window.addEventListener('load', function() {
   fetchTodos();
 });
+
+// group todos by mm/yy combination
+function createSublists(todos) {
+  const sublists = {};
+
+  todos.forEach(function (todo) {
+    const month = todo.month;
+    const year = todo.year;
+    const dueDate = month && year ? `${month}/${year.slice(-2)}` : 'No Due Date';
+
+    if (!sublists[dueDate]) {sublists[dueDate] = []};
+    sublists[dueDate].push(todo);
+  });
+
+  console.log('sublists: ', sublists);
+}
 
 // Function to delete a todo item
 function deleteTodoItem(todoId) {
